--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10417,3 +10417,14 @@ a.text-dark:focus {
           box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
 
+.new-task {
+  margin: 15px 0 30px 0;
+}
+
+.heading {
+  text-align: center;
+  font-size: 25px;
+  height: 10vh;
+  padding: 25px;
+}
+
