--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -13,3 +13,14 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
 
+.new-task {
+  margin: 15px 0 30px 0;
+}
+
+.heading {
+  // background-color: rgb(217, 228, 250);
+  text-align: center;
+  font-size: 25px;
+  height: 10vh;
+  padding: 25px;
+}
